# massivelogger

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  massive_logger.h  run_viewer.bash  test.c
benchmarks/: benchmark.c
examples/mandelbrot/: .gitignore  Makefile  README.md  mandelbrot.c  plot.gpi
examples/os_scheduling/: .gitignore  Makefile  README.md  os_scheduling.c
include/: massive_logger.h
include/mlog/: base.h  mlog.h  time.h  util.h
tests/: base_test.c  mlog_test.c  printf_test.c  realloc_test.c  test_helper.h  timeline_test.c  type_test.c
viewer/: intervaltree.py  main.py  main_v2.py  main_v3.py  mlog_viewer.py  server_lifecycle.py
